delete article and delete blog routes
